# BStar-Tree

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _output.cpp  _output.run  bstar_indev.cpp  bstar_tester.cpp  bstar_tree.cpp  bstar_tree.h  bstar_wip.cpp  final.run  log.txt  main
be/: bepsilon_tree.h  bepsilon_tree_.h  bepsilon_tree_refactored.h  bstar_tester.cpp
dm/: bepsilon_tree.h  dm_data.csv  dm_design.cpp
experiment/: b_trees.h  bstar_tester.cpp
legacy/: bstar_tester.cpp  bstar_tree.h
new/: b_star_tree_refactored.h  bstar_tester.cpp  bstar_tester_legacy.cpp
